[project]
name = "openqa-async"
version = "0.1.0"
description = "OpenqQA Client Library with Async Support"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ondřej Súkup", email = "mimi.vx@gmail.com" }]
dependencies = [
  "httpx>=0.28.1",
]

[dependency-groups]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
