[project]
name = "openqa-async"
version = "0.1.0"
description = "OpenqQA Client Library with Async Support"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-2.0-or-later"
license-files = ["COPYING"]
authors = [{ name = "Ondřej Súkup", email = "mimi.vx@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.28.1",
  "pyyaml>=6",
]

[dependency-groups]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "respx>=0.21",
  "pytest-asyncio>=0.24",
  "types-pyyaml>=6",
]
lint = [
  "ruff>=0.15.15",
  "ty>=0.0.40",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.src]
include = ["src"]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
